# scalex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build-native-semanticdb.sh  build-native.sh  build.mill  scalex.scala  scalex.test.scala
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md  BENCHMARK.md  DAEMON-SAFETY.md  GAP_ANALYSIS.md  HOW_IT_WORKS.md  INSPIRATION.md  MILL-SEMANTICDB.md  ROADMAP.md
kodex/: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs
kodex/docs/: HOW-IT-WORKS.md  HOW-THE-INDEX-WORKS.md  WHY-KODEX.md
kodex/proto/: semanticdb.proto
kodex/src/: main.rs  model.rs  symbol.rs
kodex/src/index/: reader.rs  writer.rs
kodex/src/ingest/: discovery.rs  merge.rs  mod.rs  printer.rs  semanticdb.rs
kodex/src/query/: filter.rs  format.rs  graph.rs  mod.rs  refs.rs  symbol.rs
kodex/src/query/commands/: explore.rs  flow.rs  impact.rs  mod.rs  orient.rs  trace.rs
kodex/tests/snapshot/: queries.sh.example  run.sh
profiling/: README.md  profile.sh  scalex.jfc
scalex-semanticdb/: CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md
scripts/: check-skill-frontmatter.sh
site/: MASCOT.md  index.html  og-banner-light.html  og-banner.html  readme-banner-dark.html  readme-banner-light.html
src/: analysis.scala  analysis.test.scala  bench.scala  cli.scala  cli.test.scala  command-helpers.scala  commands.scala  dispatch.scala  extraction.scala  extraction.test.scala  format.scala  index.scala  index.test.scala  model.scala  project.scala  test-base.test.scala
tests/: analysis.test.scala  cli.test.scala  extraction.test.scala  (+3 more)
(+115 files in other folders)
